# users-model

./: README.md  build.sh  pyproject.toml  requirements_dev.txt  setup.cfg  subir.sh  tox.ini
.github/workflows/: tests.yml
docker/: dockerfile  ejecutar.sh  entrypoint.sh  instalar.sh  test.sh
src/: setup.py  subir.sh
src/scripts/: migrar_sileg.py
src/users/model/: MailsModel.py  UsersModel.py  __init__.py  __main__.py
src/users/model/entities/: User.py  Usuario.py  __init__.py
tests/: test_get_users.py
