[metadata]
name = users-model
version = 1.0.17
description = Modelo de usuarios
url = https://github.com/pablodanielrey/users-model
author = Desarrollo DiTeSi, FCE
author_email = ditesi@econo.unlp.edu.ar
classifiers =
    'Development Status :: 3 - Alpha'
    'Programming Language :: Python :: 3'
    'Programming Language :: Python :: 3.5'


[options]
packages = users
install_requires=
    dateutils
    requests
    pytz
    psycopg2-binary
    SQLAlchemy
    SQLAlchemy-serializer
    pulsar-client
python_requires = >=3.9
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing = 
    pytest >= 7.1
    pytest-cov >= 3.0
    mypy >= 0.950
    flake8 >= 4.0
    tox >= 3.25

[options.package_data]
users = py.typed

[flake8]
max-line-length = 160